Move to using devstack-gate for this job
Instead of using a custom script, lets use the OpenStack devstack-gate
infrastructure to run the ODL tests.

Change-Id: Ib0a990f35764abd4b9f03385a414b0756aab62f9
Signed-off-by: Kyle Mestery <mestery@mestery.com>